src/objects/Mogli_SMS__MogliGateway_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Mogli_SMS__OpenFNProject__c</fullName>
        <label>OpenFNProject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__OpenFnSecret__c</fullName>
        <label>OpenFnSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TelerivetAPIKey__c</fullName>
        <label>TelerivetAPIKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TelerivetPhoneId__c</fullName>
        <label>TelerivetPhoneId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TelerivetProjectID__c</fullName>
        <label>TelerivetProjectID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TelerivetSecret__c</fullName>
        <label>TelerivetSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TxtWireNumber__c</fullName>
        <label>TxtWireNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TxtwireAPIKey__c</fullName>
        <label>TxtwireAPIKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TxtwireProgramID__c</fullName>
        <label>TxtwireProgramID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TxtwireSourceAddress__c</fullName>
        <label>TxtwireSourceAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__TxtwireVersion__c</fullName>
        <defaultValue>&quot;v3&quot;</defaultValue>
        <description>API version, i.e. v3 or v4</description>
        <inlineHelpText>API version, i.e. v3 or v4</inlineHelpText>
        <label>TxtwireVersion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MogliGateway Settings</label>
    <pluralLabel>MogliGateway Settings</pluralLabel>
</CustomObject>